<resources>
    <string name="app_name">TripListProject</string>
    <string name="new_trip">New Trip</string>
    <string name="enter_trip_title">Enter trip title</string>
    <string name="enter_trip_description">Enter trip description</string>
    <string name="add_image">Add Image</string>
    <string name="no_location">No location was chosen</string>
    <string name="add_location">Add Location</string>
    <string name="location">Location</string>
    <string name="add_music">Add Music</string>
    <string name="no_music">No music was chosen</string>
    <string name="add_to_trips_list">Add To Trip List</string>
    <string name="save_location">Save Location</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="sure_you_want_to_delete">Are you sure you want to delete this trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_trip_location">Enter trip location</string>
    <string name="play_music">Play Music</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_image">Change Image</string>
    <string name="change_location">Change Location</string>
    <string name="no_trip_title">No Trip Title</string>
    <string name="no_trip_description">No Trip Description</string>
    <string name="back_btn">back</string>
    <string name="image_labeling">Image Labeling</string>
    <string name="loading">loading...</string>
    <string name="image_labeling_failed">Image labeling failed</string>
    <string name="no_labels_detected">No labels detected</string>
    <string name="confidence">, Confidence:</string>
    <string name="exit_without_adding_trip">Are you sure you want to exit without adding the trip?</string>
    <string name="exit_confirmation">Exit Confirmation</string>
    <string name="trip_list">TRIP LIST</string>
    <string name="ai">AI</string>
    <string name="set_location_as_current_location">Set location as current location</string>
    <string name="no_photo">No Image</string>
    <string name="without_saving_your_changes">Are you sure to go back without saving your changes?</string>
    <string name="no_description">No description</string>
    <string name="you_must_enter_a_title">You must enter a title</string>
    <string name="from_where_upload_the_image">Please select from where you would like to upload the image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>