<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.add_character.AddItemFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:gravity="center"
            app:icon="@drawable/baseline_arrow_forward_ios_24"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_trip"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/gray_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_trip_title"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@color/gray_green"
            android:id="@+id/item_title"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:overScrollMode="always"
            android:maxLines="1"
            android:minLines="1"
            android:gravity="top"
            android:layout_marginBottom="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_trip_description"
            android:textColorHint="@color/black"
            android:id="@+id/item_description"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:overScrollMode="always"
            android:maxLines="2"
            android:minLines="1"
            android:gravity="top"
            android:layout_marginBottom="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_trip_location"
            android:textColorHint="@color/black"
            android:id="@+id/item_location"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:overScrollMode="always"
            android:maxLines="1"
            android:minLines="1"
            android:gravity="top"
            android:layout_marginBottom="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/location_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/set_location_as_current_location"
        android:textColor="@color/black"
        app:buttonTint="@color/gray_green" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:iconTint="@color/gray_green"
        android:text="@string/add_image"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:strokeColor="@color/gray_green"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:icon="@drawable/baseline_image_24"
        app:iconSize="30dp"
        android:id="@+id/image_btn"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/result_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/gray_green"
        android:text="@string/add_to_trips_list"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:id="@+id/finish_btn"/>

</LinearLayout>
